...
    @objc
    func promptForWeatherLocation(_ sender: Any) {
        let alertv = UIAlertController(title: "Add Location", message: "State is two letters", preferredStyle: .alert)
        alertv.addTextField { (textfield) in
            textfield.placeholder = "City, St"
        }
        let actionAdd = UIAlertAction(title: "Add", style: .default) { (alertact) in
            if let textfld1 = alertv.textFields?.first, let cityState = textfld1.text {
                if (!cityState.isEmpty) {
                    DispatchQueue.main.async {
                        self.insertNewObject(cityState)
                    }
                }
...
